# example-project

./: Dockerfile  README.md  pyproject.toml  shell.nix
geomatch/: r_entry_example.py  r_interop.py
rcode/: .Rbuildignore  .Rprofile  DESCRIPTION  NAMESPACE  README.md  pipeline_entry_example.R
rcode/R/: hello_world.R
rcode/man/: hello_world.Rd
rcode/renv/: manage.R
rcode/sql/: get-delta.sql
rcode/tests/testthat/: test_hello_word.R
