[tool.poetry]
name = "can-example"
version = "0.1.0"
description = ""
authors = ["Michael Maurer <mjmaurer777@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
runexample = "python geomatch/r_entry_example.py"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
boto3 = "^1.34.92"
openpyxl = "^3.1.2"
poethepoet = "^0.25.1"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
